# skillbox_crm_system

./: README.md  requirements.txt
crm_system/: .env.example  conftest.py  pyproject.toml
crm_system/apps/ads/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
crm_system/apps/ads/migrations/: 0001_initial.py  0002_alter_adcampaign_channel.py  0003_alter_adcampaign_budget.py  0004_alter_adcampaign_budget.py
crm_system/apps/ads/views/: __init__.py  adcampaign_create_view.py  adcampaign_delete_view.py  adcampaign_detail_view.py  adcampaign_list_view.py  adcampaign_statistic_view.py  adcampaign_update_view.py
crm_system/apps/common/: apps.py
crm_system/apps/contracts/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
crm_system/apps/contracts/migrations/: 0001_initial.py  0002_alter_contract_amount_alter_contract_duration.py  0003_alter_contract_duration.py
crm_system/apps/contracts/views/: __init__.py  contract_create_view.py  contract_delete_view.py  contract_detail_view.py  contract_list_view.py  contract_update_view.py
crm_system/apps/customers/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
crm_system/apps/customers/migrations/: 0001_initial.py
crm_system/apps/customers/views/: __init__.py  customer_create_view.py  customer_delete_view.py  customer_detail_view.py  customer_list_view.py  customer_update_view.py
crm_system/apps/leads/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
crm_system/apps/products/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
crm_system/config/: settings.py  urls.py
crm_system/static/: style.css
crm_system/templates/: _base.html
crm_system/templates/ads/: ads-create.html  ads-delete.html  ads-detail.html  ads-edit.html  ads-list.html  ads-statistic.html
crm_system/templates/contracts/: contracts-create.html  contracts-delete.html  contracts-detail.html  contracts-edit.html  contracts-list.html
crm_system/templates/customers/: customers-create.html  customers-delete.html  customers-detail.html  customers-edit.html  customers-list.html
crm_system/templates/leads/: leads-create.html  leads-delete.html  leads-detail.html  leads-edit.html  leads-list.html
crm_system/templates/products/: products-create.html  products-delete.html  products-detail.html  products-edit.html  products-list.html
crm_system/templates/registration/: login.html  logout.html
crm_system/templates/users/: index.html
(+20 files in other folders)
