[project]
name = "crm_system"
version = "1.0.0"
description = "Пользовательская CRM-система"
readme = "README.md"

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"
init-hook = "import os, sys; sys.path.insert(0, os.getcwd()); sys.path.insert(0, os.path.join(os.getcwd(), 'apps'))"
ignore = ["migrations", "tests"]
ignore-paths = [
    ".*/migrations/*",
    ".*/settings.py",
    ".*/manage.py",
    ".*/apps.py",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "too-many-ancestors",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true
warn_return_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
pretty = true
exclude = [
    "README.md",
    ".env",
    ".gitignore",
    "^static/.*$",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest]
django_settings_module = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["apps"]